app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require bootstrap_and_overrides
 *= require flat-ui
 *= require font-awesome
 *= require jquery.ui.autocomplete
 *= require_tree ./view_stylesheets
 */

/*
 
THEME 1

$sidebar-background: #ECF0F1;
$sidebar-background-hover: #BDC3C7;
$sidebar-foreground: #999;
$sidebar-foreground-active: #2ECC71;
$sidebar-foreground-hover: white;
*/


// THEME 2
// $sidebar-background: #252627;
// $sidebar-background-hover: #40474F;
// $sidebar-foreground: #999;
// $sidebar-foreground-active: rgb(0, 245, 255); /*#27F;*/
// $sidebar-foreground-hover: white;
// $sidebar-shadow-color: #999;


/* THEME 3 */
// $sidebar-background: #ECF0F1;
// $sidebar-background-hover: #BDC3C7;
// $sidebar-foreground: #999;
// $sidebar-foreground-active: #2ECC71;
// $sidebar-foreground-hover: white;
// $sidebar-shadow-color: #888;

/* THEME 4 */
$sidebar-background: #252627;
$sidebar-background-hover: #40474F;
$sidebar-foreground: #999;
$sidebar-foreground-active: #27F;
$sidebar-foreground-hover: white;
$sidebar-shadow-color: #999;
// $background-color: #E8E3DD;
$background-color: #E8E8E8;
$btn-primary: #F55451;



body {
  margin: 0;
  // padding: 10px 10px 10px 0;
  background-color: $background-color !important;
}

//Button color overrides
//

.btn {
  
}

.btn-primary {
  background-color: $btn-primary !important;

  &:hover, &:focus {
    background-color: #FF322E !important;    
  }
}

a.text-link {
  font-weight: bold;
  text-decoration: none;
  cursor: pointer;
  
  &:hover {
    text-decoration: underline;
  }
}

#main {
  overflow: auto;
  padding: 10px 30px;
  // border-radius: 4px;
}

.info {
  h2 {
    font-size: 40px; 
    margin-bottom:10px;
  }
}

.hidden {
  visibility: visible !important;
  display: none;
}

#top-nav {
  z-index: 100;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  border-bottom: 1px #2C3E50 solid;

  .navbar {
    margin-bottom: 0;
  }

  .navbar-inner {
    padding: 0 20px;
    border-radius: 0;
  }

  .navbar-search {
    margin-top: 8px;

    input {
      margin-bottom: 0px;
      height: 15px;
    }
  }
}

#account-dropdown {
  position: relative;
  top: 6px;
}

$sidebar-trans-time: 0.5s;

#sidebar, #sidebar-placeholder {
  width: 100px;
}

#sidebar {
  box-shadow: 2px 0 2px $sidebar-shadow-color;
  position:fixed;
  top: 0;
  bottom: 0;
  background-color: $sidebar-background;

  .sidebar-nav {
    overflow: auto;
    height: 100%;
  }

  .sidebar-inner {
    height: 100%;
    min-height: 400px;
    position: relative;    
  }

  .nav-list {
    padding: 0 0 20px 0;
  }

  .notist-logo {
    height: 84px;
    background-image:url('/assets/logo/logo-inactive.png');
    background-repeat:no-repeat;
    background-position:center center;  padding-left:100px;
    background-size: 45px 45px;

    &:hover {
      background-image:url('/assets/logo/logo-hover.png');
    }

    &.active {
      background-image:url('/assets/logo/logo-active.png');
    }
  }

  li {
    line-height: 2.2;
    position: relative;

    a {
      color: $sidebar-foreground;
      text-align: center;
      font-size: 1.0em;
      padding: 15px 0;
      margin: 0;
      border-radius: 0;
      text-shadow: none;
      background-color: $sidebar-background;
      
      &:hover {
        background-color: $sidebar-background-hover; 
        color: $sidebar-foreground-hover;
      }

      &.active {
        color: $sidebar-foreground-active;
      }
    }

    i {
      font-size: 2em;
    }
    .text {
      margin-top: 5px;
    }
  }

  .nav-list-bottom {
    bottom: 0;
    position: absolute;

    a {
      width:100px;
      padding: 5px 5px 0 0;
      border: none;

      &:hover {
        background-color: $sidebar-background;
        color: $sidebar-foreground-hover;
      }
    }

    i {
      font-size: 1em;
      margin-right: 5px;
    }

    .text {
      display: inline;
    }
  }

  .text {

  }

  & + #sidebar-placeholder {
    height: 52px;
  }
}

form.new-user {
  margin-top: 10px;
  margin-bottom: 10px;
}

.account-or-text {
  margin: 15px 0 20px 5px;
}

.account-shared-links {
  line-height: 1.8;

  .btn {
    margin-bottom: 10px;
  }
}

.clear {
  clear: both;
}

.hidden {
  display: none;
}

